2008-01-16  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar-export-file)
	(icalendar-import-file): Restore significant trailing whitespace
	in `interactive' prompts.

2008-01-15  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-arch.el (vc-arch-delete-rej-if-obsolete): Remove the
	after-save-hook so that it is not called multiple times.

	* vc-svn.el (vc-svn-resolve-when-done): Likewise.

2008-01-15  Glenn Morris  <rgm@gnu.org>

	* diff-mode.el (diff-end-of-hunk): Revert 2008-01-08 change.

2008-01-14  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-constant-symbol): New function which
	supersedes c-const-symbol.  During a customize-.. call it enables
	an element of (e.g.) c-hanging-braces alist to have its name
	displayed, even when the default value of c-h-b etc. doesn't
	include the elemnt.  Replace uses of the old function by the new.

	* progmodes/cc-vars.el (c-hanging-braces-alist): Remove the
	obscure non-working fragment ":value c-".

	* progmodes/cc-engine.el (c-guess-basic-syntax): prevent a macro
	call inside a struct being recognised as a K&R argument.

2008-01-14  Jason Rumney  <jasonr@gnu.org>

	* image.el (image-type): Use image-type-from-file-name (from trunk
	2007-05-21  Chong Yidong  <cyd@stupidchicken.com>).

2008-01-12  Glenn Morris  <rgm@gnu.org>

	* woman.el (woman-parse-numeric-arg): Change handling of `==':
	can be interned without a function definition.

2008-01-12  Eli Zaretskii  <eliz@gnu.org>

	* view.el (view-file-other-window, view-file-other-frame): Don't
	kill the buffer if it is modified.  Doc fixes.
	(kill-buffer-if-not-modified): New function.
	(view-file): Don't kill the buffer if it is modified.

	* progmodes/ebrowse.el (ebrowse-view-file-other-window): Delete
	function.
	(ebrowse-view/find-file-and-search-pattern): Call
	view-file-other-window instead of ebrowse-view-file-other-window.
	(ebrowse-view-file-other-frame): Don't call
	current-window-configuration.  Fix second argument in the call to